welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def growFlowers(){
  flower(Color.RED)
  avance(2)
  flower(Color.BLUE)
  recule(3)
  droite()
  avance(2)
  gauche()
  flower(Color.ORANGE)
  recule(3)
  droite()
  avance(2)
  gauche()
  flower(Color.PINK)
  avance(3)
  flower(Color.GREEN)
  
}

def flower(c:Color){
  setCouleuRBrosse(c)
  baisseBrosse()
  avance(2)
  recule()
  droite()
  recule()
  avance(2)
  recule()
  setCouleurBrosse(Color.YELLOW)
  baisseBrosse()
  leveBrosse()
}